--- a/doc/sections/sec04.tex
+++ b/doc/sections/sec04.tex
@@ -25,9 +25,9 @@ like in this Table~\ref{tab:regperf}.
 \end{table}
 
 \begin{table}[t]
-  \caption{Classification performance comparison of (1) baseline, KNN with (2) 1
-    and (3) 5 neighbours, random forest with (4) 10 and (5) 50 decision trees as
-    measured using the \fmeasure{} on the test data set.}
+  \caption{Classification performance comparison of (1) baseline, $k$-NN with
+    (2) 1 and (3) 5 neighbours, random forest with (4) 10 and (5) 50 decision
+    trees as measured using the \fmeasure{} on the test data set.}
   % \centering\small
   % \renewcommand{\tabcolsep}{1pt}
   \newcolumntype{C}{>{\centering\arraybackslash}X}%
