Remove line numbers from listings

--- a/doc/components/preamble.tex
+++ b/doc/components/preamble.tex
@@ -105,9 +105,9 @@
   keywordstyle=\color{dkgray},
   language=Python,
   morekeywords={*,\ldots},
-  numbers=left,
-  numbersep=5pt,
-  numberstyle=\footnotesize\color{ltgray},
+  % numbers=left,
+  % numbersep=5pt,
+  % numberstyle=\footnotesize\color{ltgray},
   rulecolor=\color{black},
   showspaces=false,
   showstringspaces=false,
