Fix section one, adjust parskip

--- a/doc/components/appendix.tex
+++ b/doc/components/appendix.tex
@@ -3,4 +3,40 @@
 \subsection{Feature List}
 \label{app:feature-list}
 
-``but'', ``good'', ``staff'', etc.
+% \setlength\LTleft{0pt}
+% \setlength\LTright{0pt}
+% \setlength\LTcapwidth{\textwidth}
+% \newcolumntype{L}{>{\raggedright\arraybackslash}p{0.6\textwidth}}
+% \newcolumntype{R}{>{\raggedleft\arraybackslash}p{0.335\textwidth}}
+% \begin{longtable}{@{}>{\small}l@{\kern4pt}>{\small}L>{\small}R@{}}
+%   \caption{A complete list of features selection scores for the regression
+%     (linear regression test) and the classification ($\chi^2$ test) tasks.}
+%   \label{tab:features-list}
+%   \toprule
+%   \multicolumn{2}{@{}>{\small}l@{}}{\textbf{Feature}} & \textbf{Reference} \\
+%   \midrule
+%   % \endfirsthead
+
+%   \multicolumn{3}{@{}>{\small}c@{}}{\tablename\ \thetable{} (continued)} \\[0.5em]
+%   \toprule
+%   \multicolumn{2}{@{}>{\small}l@{}}{\textbf{Feature}} & \textbf{Reference} \\
+%   \midrule
+%   % \endhead
+
+%   \hline
+%   \multicolumn{3}{@{}>{\small}r@{}}{\small continued on next page} \\
+%   % \endfoot
+
+%   \bottomrule
+%   % \endlastfoot
+
+%   \multicolumn{3}{@{}>{\small}l@{}}{\itshape Derived from Content.} \\
+%   & Automated Readability Index & sup \\
+%   & Auxiliary verb rate & sup \\
+% \end{longtable}
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../main"
+%%% End:
