--- a/doc/sections/sec03.tex
+++ b/doc/sections/sec03.tex
@@ -58,18 +58,36 @@ and the entire sample space; the required memory exceeds our availability.
 
 We test $k$-NN with 1 and 5 neighbors, and chose 10 and 50 trees for two random
 forest models as a proxy for marginal comparison and to keep the running time of
-evaluating 50 different subsets of features manageable.  The performance of 
+evaluating 50 different subsets of features manageable.  The performance of the
+random forest model can be further improved by an increasing number of decision
+trees.  This improvement comes with a significant increase in training time.
+For the purpose of this experiment, the chosen parameters are sufficient to make
+evaluate the performance for different subsets of top-$k$ features.
 
 \subsection{Evaluation Measures}
 
-Talk about log loss being to punishing for false positives and define
-\fmeasure{} in Equation~\ref{eq:fmeasure} as the harmonic mean of \precision{}
+To measure the accuracy of our models, we chose different scoring functions for
+each of the tasks.  The mean squared error (MSE) is typically used to evaluate
+the performance of regression models.  For classification we define \fmeasure{}
+in the following equation as the harmonic mean of \precision{}
 ($tp / (tp + fp)$) and \recall{} ($tp / (tp + fn)$).
 
+\vspace{-1em}
 \begin{equation}\label{eq:fmeasure}
   \text{\fmeasure} = 2 \cdot \frac{\precision \cdot \recall} {\precision +
     \recall}
-\end{equation}\vspace{-5pt}
+\end{equation}
+
+We implement the MSE and the logarithmic
+loss\furl{https://www.kaggle.com/wiki/LogarithmicLoss} functions, but do not
+consider the latter for our final evaluation, as it is extremely punishing
+towards false positives and false negatives, irrespective of the overall
+precision and recall the model provides.  However, initial test series with the
+logarithmic loss indicate an almost identical performance pattern, with the
+exception of the baseline.  It should be noted that the logarithmic loss scoring
+function requires as input the probability of a label, whereas the \fmeasure{}
+expects the label itself.  Therefore, we evenly round the probabilities for all
+accuracy measures.
 
 %%% Local Variables:
 %%% mode: latex
