--- a/doc/sections/sec01.tex
+++ b/doc/sections/sec01.tex
@@ -1,19 +1,34 @@
 \section{Introduction}
 \label{sec:one}
 
-We are provided with two data sets from Yelp\furl{https://www.yelp.com/dataset_challenge}. One is for regression task. The other one is for classification. Both are reviews that have been transformed into word counts vector by Bag-of-Words model. There are 50 features in each word counts vector. 
+The Yelp\furl{https://www.yelp.com/dataset_challenge} data set consists of two
+parts meant for two separate machine learning tasks.  One of these tasks being
+regression, where, given a word count vector of a review, we predict the number
+of positive votes the review has received.  The other task pertains to the
+problem of classification.  Here, we label a review as either positive (1) or
+negative (0) given the same word count vector.  A positive review has received
+an average rating of more than three stars, whereas a negative label indicates a
+review of three or fewer stars.
 
-In regression task, we predict the number of positive votes for a review given a word counts. For classification task, we use word counts vector to distinguish (binary) labels for low ($\leq 3$) and high ($>3$ stars) rating of reviews.
+As indicated above, the data sets comprise 50 feature vectors, which correspond
+to the word counts for 50 manually selected most frequent words.  Providing this
+relatively large number of features, we turn to feature selection algorithms in
+order to reduce the model fitting complexity.  We utilize different methods for
+the two tasks.  As a central theme for this exercise, we focus on selecting the
+optimal number of features and compare the performance of all models using
+subsets of the most discriminating features.
 
-Given the large number of features, we also apply feature selection methods. Different techniques are used for the different tasks.
+The main objective is to beat the performance of a sensibly chosen naive
+baseline.  For this purpose, we implement simple, yet powerful machine learning
+models.  These perform very well for the regression task and barely manage to
+beat the baseline of the classification task.
 
-For both task, we try to overcome the naive baseline with simple approaches before using a more complicated one. After all, we can surpass the naive baseline with simple models, except for classification.
-
-The methods and experiments are detailed in Section~\ref{sec:two}
-and~\ref{sec:three} respectively.
-
-A complete list of all the features used for each task is
-detailed in Appendix~\ref{app:feature-list}.
+The implemented models and the experiment framework are discussed in detail in
+Section~\ref{sec:two} and~\ref{sec:three}, respectively.  Section~\ref{sec:four}
+contains the results of the experiment.  We conclude this report with a brief
+conclusion in Section~\ref{sec:five}.  A complete list of all features and their
+respective selection test scores for each task can be found in
+Appendix~\ref{app:feature-list}.
 
 %%% Local Variables:
 %%% mode: latex
