Add regression results

--- a/doc/sections/sec04.tex
+++ b/doc/sections/sec04.tex
@@ -32,7 +32,15 @@ As we can see, polynomial regression still maintains a good performance compare 
 \end{table}
 
 \subsection{Classification}
+We continue apply the same procedure to classification task. The right graph in Figure~\ref{fig:training} shows F1-score of baseline, k-NN with k equals 1 and 5, and Random Forest with 10 and 50 trees.
 
+Only random forests with a small number of features can (barely) beat the baseline. Both settings for random forest achieve the best result when using 6 features. The performances become worse when the number of features increases. Random forests with 50 trees catch up with the baseline when we used almost all features.
+
+k-NN only overcome the baseline by a very little margin when using 1 and 2 features. Both k-NN settings have the best result with 2 features. The rest perform much worse than the baseline. There is one interesting dip in the performance when using k-NN with 1 neighbor and 3 features.
+
+Our final model we choose from cross validation results is random forest with 50 trees and using 6 best selected features. For demonstration purpose, we train all models with best setting and run on the test data. The results are presented in the Table~\ref{tab:clsperf}
+
+Our final model still returns the best result on the data set although by not much when compare to the baseline. Other models surpass the baseline by a small margin as well, except for k-NN with 1 neighbor and 2 features which gives a very low performance.
 
 \begin{table}[t]
   \caption{Classification performance comparison of (1) baseline, $k$-NN with
@@ -47,10 +55,10 @@ As we can see, polynomial regression still maintains a good performance compare 
     \bfseries Model & \bfseries Top-$k$ Features & \bfseries \fmeasure{} \\
     \midrule
     (1) & --- & 0.771499 \\
-    (2) &   4 & 0.805405 \\
-    (3) &   4 & 0.799732 \\
-    (4) &   6 & 0.812203 \\
-    (5) &   6 & 0.814915 \\
+    (2) &   2 & 0.024242 \\
+    (3) &   2 & 0.782774 \\
+    (4) &   6 & 0.813008 \\
+    (5) &   6 & 0.813513 \\
     \bottomrule
   \end{tabularx}
 \label{tab:clsperf}
