--- a/doc/components/preamble.tex
+++ b/doc/components/preamble.tex
@@ -55,9 +55,11 @@
 
 %% figures, graphics and tables
 \usepackage{booktabs}
+\usepackage{dcolumn}
 \usepackage{graphicx}
 \usepackage{longtable}
 \usepackage{multirow}
+\usepackage{siunitx}
 \usepackage{tabularx}
 
 \setcapindent{0pt}
