--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -5,11 +5,11 @@
   Top-$k$ Feature Subsets}
 
 \author{
-  \large Christian Fricke\\[-.2em]
-  \texttt{\normalsize christian.fricke@aalto.fi}
+  Christian Fricke\\[-.2em]
+  \large christian.fricke@aalto.fi
   \and
-  \large Dan Nguyen\\[-.2em]
-  \texttt{\normalsize dan.nguyen@aalto.fi}
+   Dan Nguyen\\[-.2em]
+  \large dan.nguyen@aalto.fi
 }
 
 \date{\large November 25, 2016}
