--- a/doc/main.tex
+++ b/doc/main.tex
@@ -20,13 +20,14 @@
   \input{sections/sec04}
   \input{sections/sec05}
 
-  \appendix
-
-  \newpage
-  \input{components/appendix}
-
   \bibliographystyle{IEEEtranN}
   \bibliography{bibliography/literature}
+
+  \newpage
+  \onecolumn
+
+  \appendix
+  \input{components/appendix}
 
 \end{document}
 
