--- a/doc/main.tex
+++ b/doc/main.tex
@@ -24,10 +24,11 @@
   \bibliography{bibliography/literature}
 
   \newpage
-  \onecolumn
 
-  \appendix
-  \input{components/appendix}
+  {\onecolumn
+    \appendix
+    \input{components/appendix}
+  } % end onecolumn
 
 \end{document}
 
